# omx-training

./: .gitignore  CALIBRATION_NOTES.md  CLAUDE.md  MOTOR_SETUP.md  README.md  align_follower.py  calibrate_gripper.py  check_calibration.py  config.py  control_utils.py  diagnose_gripper_range.py  diagnose_wrist_roll.py  eval.py  eval_pi0.py  eval_server_modal.py  fix_metadata.py  inspect_rrd.py  inspect_state.py  pyproject.toml  reboot_motors.py  record.py  replay.py  rerun_utils.py  resume_vastai.py  robot_utils.py  serve_pi0_modal.py  sweep_leader_current.py  teleop.py  teleop_log.txt  train.py  train_modal.py  train_pi0.py  train_pi0_modal.py  train_vastai.py  visualize.py
_deprecated/: CALIBRATION_NOTES.md  MOTOR_SETUP.md  teleop_log.txt
_deprecated/calibration/: align_follower.py  calibrate_gripper.py  center_arms.py  retrofit_dataset.py
_deprecated/diagnostics/: capture_reference_poses.py  check_eeprom_vs_json.py  check_raw_positions.py  diagnose_gripper_range.py  inspect_replay_start.py  probe_follower.py
_deprecated/utils/: robot_utils.py.patched_backup
benchmarks/: __init__.py
benchmarks/act_sim/: __init__.py  dataset.py  generate.py
calibration/: align_follower.py  calibrate_gripper.py  check_calibration.py  create_episode_subset.py  make_relative_dataset.py  recompute_global_stats.py
configs/act/: __init__.py  base.py  pour_water.py  pour_water_a10g_richlog.py  pour_water_fast.py  sim_transfer_cube_reference.py  sim_transfer_cube_smoke.py
configs/train/: base.py  pour_absolute.py  pour_absolute_70_from_3k.py  pour_absolute_70_from_3k_globalstats.py  pour_absolute_globalstats.py  pour_relative.py  (+4 more)
control/: teleop.py
data/: fix_metadata.py  record.py  replay.py  scene_assist.py  scene_coverage_report.py  visualize.py
deploy/: monitor_vast_36086277.sh  monitor_vast_36087544.sh  phase0_udp_spike.py  phase1_modal_build_check.py  phase3_punch_e2e.py  phase4_quic_echo.py  phase5_request_reply.py  serve_molmoact2_modal.py  serve_pi0_modal.py  serve_pi0_quic_modal.py  train_custom_act_modal.py  train_modal.py  train_modal_lerobot.py  train_pi0_modal.py  train_vastai.py
diagnostics/: diagnose_wrist_roll.py  inspect_state.py  reboot_motors.py  stock_teleop.py  sweep_leader_current.py  view_opencv_cameras.py
evaluation/: analyze_rrd.py  compare_scene_rgb.py  dagger_quic.py  eval.py  eval_molmoact2.py  eval_pi0.py  eval_pi0_quic.py  export_rrd_cameras.py  logged_dagger_strategy.py  make_episode_gallery.py  make_train_eval_gallery.py  offline_eval_pi0_modal.py  offline_molmoact2_dataset_modal.py  offline_molmoact2_modal.py  quic_inference_engine.py  quic_rollout_context.py  visualize_dataset.py  visualize_distribution.py
omx_quic/: .gitignore  Cargo.toml  pyproject.toml
omx_quic/python/omx_quic/: __init__.py  rendezvous.py
omx_quic/src/: lib.rs  punch.rs  quic.rs  stun.rs
rlt/: actor.py
tests/: smoke_test.py  test_act_sim_dataset.py
training/: train.py  train_pi0.py
utils/: config.py  control_utils.py  dynamixel_errors.py  lerobot_compat.py  omx_feedback_leader.py  rerun_utils.py  robot_utils.py
(+9 files in other folders)
