[project]
name = "omx-training"
version = "0.1.0"
description = "OMX robot arm training scripts using LeRobot"
requires-python = ">=3.12"
dependencies = [
    "lerobot[dynamixel]>=0.5.1",
    "rerun-sdk>=0.22",
    "pynput>=1.7",
    "vastai-sdk>=0.2",
    "pytest>=9.0.3",
    "modal>=1.4.1",
    "ultralytics>=8.3",
    "transformers>=5.9.0",
    "h5py>=3.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["utils", "calibration", "control", "data", "deploy", "diagnostics", "evaluation", "training", "rlt", "tests"]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "main" }
