[package]
name = "omx_quic"
version = "0.1.0"
edition = "2021"
description = "QUIC + UDP hole-punched transport for OMX policy inference"
license = "MIT"

[lib]
name = "omx_quic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rand = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
anyhow = "1"
bytes = "1"

[profile.release]
lto = "thin"
codegen-units = 1
