[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omx-quic"
version = "0.1.0"
description = "QUIC + UDP hole-punched transport for OMX policy inference"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "omx_quic._omx_quic"
python-source = "python"
